# frat

./: .gitignore  Cargo.toml  README.md  analyze.pl  basic.pl  bench.pl  benchmark-notes.md  cadical  check.pl  cleanup.pl  drat-trim  find.pl  frat.c  hackdical  lrat-check  makefile  mk_results.pl  newprobs.pl  old_result.pl  pastebin.pl  problems.pl  probs.pl  results.pl  run.pl  run.sh  test.pl
benchmark/: README.md  benchmark-notes.md  mod2c-3cage-unsat-10-3.sat05-2568.reshuffled-07-sc2007.cnf
benchmarks/: README.md
benckmarks/: README.md  frat-vs-drat-results.csv
bugs/: bad_step_None_0.cnf  bad_step_None_1.cnf  bad_step_None_2.cnf  bad_step_None_3.cnf  bad_step_None_4.cnf  bad_step_None_5.cnf  bad_step_None_6.cnf  bad_step_None_7.cnf  clause_13126_does_not_exist.cnf  clause_1756_does_not_exist.cnf  clause_18679_does_not_exist.cnf  clause_5455_does_not_exist.cnf  clause_732_does_not_exist.cnf  did_not_find_empty_clause_0.cnf  did_not_find_empty_clause_1.cnf  did_not_find_empty_clause_2.cnf  did_not_find_empty_clause_3.cnf  did_not_find_empty_clause_4.cnf  did_not_find_empty_clause_5.cnf  did_not_find_empty_clause_6.cnf
charts/: cumulative.py  data.py  mem.eps  mem.py  old_data.py  time.eps  time.py
check/: back  back.c  check  check.c  check.pl  test.frat  test.txt  test2.frat0
elab/: Cargo.toml
frat-failures/: 6s133-sc2014.cnf  QG7a-gensys-icl001.sat05-3822.reshuffled-07-sc2007.cnf  QG7a-gensys-ukn002.sat05-3842.reshuffled-07-sc2007.cnf  b1904P3-8x8c11h7UNSAT.tar.xz  blockpuzzle_5x10_s3_free4-sc2017.cnf  gensys-icl005.shuffled-as.sat05-3826-sc2011.cnf  (+5 more)
(+49 files in other folders)
