[package]
name = "frat-rs"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
ascii = []

[dependencies]
byteorder = "1.4.2"
arrayvec = "0.5.2"
either = "1.6.1"
rand = "0.8"
slab = "0.4.2"
